--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -1,17 +1,20 @@
+$primaryColor: #12192b;
+$secondaryColor: #0b1426;
 * {
   padding: 0;
   margin: 0;
 }
-html {
-  background-color: #061121;
-  color-scheme: dark;
-}
 li {
   list-style-type: none;
+}
+html {
+  color-scheme: dark;
+  background-color: #12192b;
 }
 a {
   text-decoration: none;
   color: white;
+  font-weight: bold;
 }
 a:visited {
   @extend a;
