--- a/src/components/navbar/navbar.module.scss
+++ b/src/components/navbar/navbar.module.scss
@@ -31,7 +31,7 @@
     background-color: transparent;
     border: transparent;
     font-weight: bold;
-    font-size: 16px;
+    font-size: $fontSize;
   }
 }
 .navbarIndent {
