--- a/src/components/navbar/navbar.module.scss
+++ b/src/components/navbar/navbar.module.scss
@@ -20,11 +20,13 @@
     gap: 10px;
     margin-right: 10rem;
     li {
-      padding: 10px;
+      & > * {
+        padding: 10px;
+      }
+      & > *:hover {
+        background-color: rgba(255, 255, 255, 0.08);
+      }
       transition: background-color 0.05s;
-    }
-    li:hover {
-      background-color: rgba(255, 255, 255, 0.08);
     }
   }
   button {
