--- a/src/components/navbar/navbar.module.scss
+++ b/src/components/navbar/navbar.module.scss
@@ -29,7 +29,7 @@
       transition: background-color 0.05s;
     }
   }
-  button {
+  .auth {
     background-color: transparent;
     border: transparent;
     font-weight: bold;
