--- a/src/components/containers/containers.module.scss
+++ b/src/components/containers/containers.module.scss
@@ -1,8 +1,10 @@
+@use "variables.scss" as *;
+@use "mixins.scss" as *;
 .dim {
   width: 100vw;
   height: 100vh;
   position: fixed;
-  background-color: rgba($color: #000000, $alpha: 0.3);
+  background-color: rgba($color: #000000, $alpha: 0.5);
   z-index: 20;
 }
 .modal {
@@ -12,6 +14,9 @@
   display: flex;
   z-index: 30;
   transform: translate(-50%, -50%);
-  border-radius: 20px;
+  border-radius: $roundedRadius;
   align-items: center;
+  @include smScreen {
+    width: 75%;
+  }
 }
