--- a/src/components/forms/formfield.module.scss
+++ b/src/components/forms/formfield.module.scss
@@ -2,18 +2,19 @@
 @use "mixins.scss" as *;
 .label {
   @include textfield;
-  width: 100%;
-  border: 4px solid black;
   background-color: $inputBackground;
   padding: 0.5rem;
-  padding &:focus-within {
-    outline: 4px;
-  }
-  .textarea {
+  height: 1.5rem;
+  input {
     height: 100%;
     width: 100%;
-    white-space: pre-line;
+    background-color: $inputBackground;
     outline: none;
+    border: none;
+    color: $textColor;
+  }
+  input::placeholder {
+    color: black;
   }
   .checkbox {
     margin-left: 0;
@@ -24,10 +25,9 @@
     box-shadow: 0px -20px 20px 0px black;
     transition: all 300ms;
   }
-  .textfield {
-    width: 100%;
-    outline: none;
-  }
+}
+.label:focus-within {
+  outline: skyblue 2px solid;
 }
 .hidden {
   visibility: hidden;
