--- a/src/components/navbar/auth.module.scss
+++ b/src/components/navbar/auth.module.scss
@@ -1,23 +1,40 @@
 @use "variables.scss" as *;
 @use "mixins.scss" as *;
+.form {
+  width: 100%;
+  height: 100%;
+}
+.visibilitySwitch {
+  height: 100%;
+  align-items: center;
+  display: flex;
+  cursor: pointer;
+}
 .container {
   background-color: $primaryColor;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  row-gap: 0.5rem;
   height: 100%;
-  @include smScreen {
-    width: 75%;
-    padding: 1rem;
-  }
+  width: 20vw;
+  padding: 1rem;
+  min-width: 300px;
+  border-radius: $roundedRadius;
   @include lgScreen {
-    width: 50%;
-    padding: 4rem;
+    width: 25vw;
+  }
+  @include smScreen {
+    width: 75vw;
+  }
+  @include mdScreen {
+    width: 50vw;
   }
   h1 {
     font-size: $lgFontSize;
     font-weight: bold;
+    text-align: center;
   }
   .switch {
     text-align: center;
@@ -31,6 +48,13 @@
       }
     }
   }
+}
+.error {
+  text-align: center;
+  display: block;
+}
+.formContainer {
+  padding: 1rem;
 }
 .close {
   position: absolute;
