fxied loader styles

--- a/src/app/_variables.scss
+++ b/src/app/_variables.scss
@@ -11,3 +11,4 @@ $lgFontSize: 32px;
 $inputBackground: #d2d2d2;
 $textColor: #000;
 $roundedRadius: 15px;
+$subNavbarHeight: calc(100vh - $navbarHeight - 5px);
