--- a/src/components/loader/loader.module.scss
+++ b/src/components/loader/loader.module.scss
@@ -1,5 +1,6 @@
+@use "variables.scss" as *;
 .loader > div > div {
-  background-color: black;
+  background-color: whitesmoke;
   width: 15px;
   height: 15px;
   animation-duration: 800ms;
@@ -21,7 +22,7 @@
   position: absolute;
   z-index: 50;
   display: flex;
-  height: 100%;
+  height: $subNavbarHeight;
   width: 100%;
   align-items: center;
   justify-content: center;
@@ -46,9 +47,13 @@
     width: 15px;
     height: 15px;
   }
-  50% {
+  25% {
     width: 20px;
     height: 20px;
+  }
+  50% {
+    width: 15px;
+    height: 15px;
   }
   100% {
     width: 15px;
