--- a/src/components/loader/loader.module.scss
+++ b/src/components/loader/loader.module.scss
@@ -22,7 +22,7 @@
   position: absolute;
   z-index: 50;
   display: flex;
-  height: $subNavbarHeight;
+  height: 100%;
   width: 100%;
   align-items: center;
   justify-content: center;
@@ -32,7 +32,14 @@
   width: 100%;
   height: 100%;
 }
-.active {
+.active::before {
+  content: "";
+  position: absolute;
+  z-index: 40;
+  display: block;
+  height: 100%;
+  width: 100%;
+  background-color: black;
   pointer-events: none;
   opacity: 0.5;
 }
