--- a/src/components/priceTable/priceTable.module.scss
+++ b/src/components/priceTable/priceTable.module.scss
@@ -17,6 +17,9 @@
   th {
     background-color: #0b1426;
   }
+  tr {
+    transition: background-color 250ms;
+  }
   td {
     background-color: rgba(17, 153, 250, 0.05);
     cursor: pointer;
@@ -24,6 +27,12 @@
   tr:hover {
     background-color: rgba(17, 153, 250, 0.12);
   }
+}
+.flashGreen {
+  background-color: rgba(0, 255, 0, 0.4);
+}
+.flashRed {
+  background-color: rgba(255, 0, 0, 0.4);
 }
 .favoriteButton {
   display: flex;
