--- a/src/components/forms/button.module.scss
+++ b/src/components/forms/button.module.scss
@@ -1,12 +1,13 @@
 @use "variables.scss" as *;
 .button {
   width: 100%;
-  height: 100%;
   border-radius: $roundedRadius;
   background-color: $accentedColor;
   text-align: center;
   border: none;
   padding: 1rem;
+  display: flex;
+  justify-content: center;
 }
 .button:hover {
   background-color: lighten($color: $accentedColor, $amount: 3);
