added details header

--- a/src/app/_variables.scss
+++ b/src/app/_variables.scss
@@ -8,6 +8,7 @@ $navbarHeight: 5rem;
 $fontSize: 16px;
 $mdFontSize: 20px;
 $lgFontSize: 32px;
+$xlFontSize: 48px;
 $inputBackground: #d2d2d2;
 $textColor: #000;
 $roundedRadius: 15px;
