added labels to graph

--- a/src/components/priceTable/details.module.scss
+++ b/src/components/priceTable/details.module.scss
@@ -25,6 +25,15 @@
 .detailsTr:hover {
   background-color: $primaryColor !important;
 }
+.increase {
+  color: rgb(0, 255, 0) !important;
+}
+.decrease {
+  color: rgb(255, 0, 0) !important;
+}
+.highlight {
+  color: white !important;
+}
 .details {
   width: 50%;
   .column {
