--- a/src/app/_mixins.scss
+++ b/src/app/_mixins.scss
@@ -6,7 +6,7 @@
   }
 }
 @mixin mdScreen {
-  @media screen and (min-width: 480px) and (max-width: 1000px) {
+  @media screen and (max-width: 1000px) {
     @content;
   }
 }
