--- a/src/components/navbar/navbar.module.scss
+++ b/src/components/navbar/navbar.module.scss
@@ -7,6 +7,7 @@
   background-color: $primaryColor;
   justify-content: center;
   border-bottom: 4px solid black;
+  z-index: 50;
   .leftContainer {
     width: 50%;
     margin-left: 10rem;
