addeed transaction window

--- a/src/app/_mixins.scss
+++ b/src/app/_mixins.scss
@@ -31,8 +31,6 @@
   overflow: hidden;
 }
 @mixin boxShadow {
-  -webkit-box-shadow: 4px 4px 8px 0px rgba(34, 60, 80, 0.2);
-  -moz-box-shadow: 4px 4px 8px 0px rgba(34, 60, 80, 0.2);
-  box-shadow: 4px 4px 8px 0px rgba(34, 60, 80, 0.2);
-  border: medium;
+  box-shadow: 4px 4px 8px 0px rgba(0, 0, 0, 0.6);
+  border: 1px $borderColor solid;
 }
