--- a/src/app/asset/[id]/page.module.scss
+++ b/src/app/asset/[id]/page.module.scss
@@ -1,4 +1,11 @@
 .container {
   display: flex;
   width: 100%;
+  .detailsContainer {
+    width: 100%;
+  }
+  .transactionContainer {
+    display: flex;
+    align-items: center;
+  }
 }
