--- a/src/components/transactionWindow/transaction.module.scss
+++ b/src/components/transactionWindow/transaction.module.scss
@@ -5,6 +5,13 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  .dividerContainer {
+    display: flex;
+    align-items: center;
+    span {
+      color: $secondaryTextColor;
+    }
+  }
   .transaction {
     @include boxShadow;
     padding: 1rem;
