--- a/src/components/transactionWindow/transaction.module.scss
+++ b/src/components/transactionWindow/transaction.module.scss
@@ -5,6 +5,9 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  span {
+    text-align: center;
+  }
   .dividerContainer {
     display: flex;
     align-items: center;
