--- a/src/components/priceTable/details.module.scss
+++ b/src/components/priceTable/details.module.scss
@@ -74,6 +74,12 @@
     }
   }
 }
+.price {
+  justify-content: center;
+  display: flex;
+  font-size: larger;
+  font-weight: bolder;
+}
 .switchContainer {
   display: flex;
   justify-content: center;
