--- a/src/app/asset/[id]/page.module.scss
+++ b/src/app/asset/[id]/page.module.scss
@@ -3,6 +3,10 @@
 .container {
   display: flex;
   justify-content: cent;
+  @include lgScreen {
+    width: 90%;
+  }
+
   @include mdScreen {
     flex-direction: column;
     align-items: center;
