--- a/src/components/priceTable/priceTable.module.scss
+++ b/src/components/priceTable/priceTable.module.scss
@@ -5,7 +5,10 @@
   text-align: center;
   border-collapse: collapse;
   margin-bottom: 1rem;
-  width: 100%;
+  @include lgScreen {
+    width: 60%;
+  }
+
   img {
     display: block;
     margin: 0 auto;
@@ -49,9 +52,6 @@
 .loadButton {
   display: flex;
   justify-content: center;
-  button {
-    width: 50%;
-  }
 }
 .flashGreen {
   background-color: rgba(60, 255, 60, 0.5);
@@ -66,6 +66,9 @@
   color: rgb(255, 0, 0);
 }
 .tableContainer {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
   margin-bottom: 1rem;
   width: 100%;
 }
