--- a/src/app/_variables.scss
+++ b/src/app/_variables.scss
@@ -5,6 +5,7 @@ $accentedColor: lighten(
   $color: blue,
   $amount: 25,
 );
+$hoverSecondaryColor: rgba(255, 255, 255, 0.08);
 $navbarHeight: 5rem;
 $fontSize: 16px;
 $mdFontSize: 20px;
