--- a/src/app/transactions/transactions.module.scss
+++ b/src/app/transactions/transactions.module.scss
@@ -1,4 +1,9 @@
+@use "mixins.scss" as *;
 .header {
   display: flex;
   justify-content: center;
+}
+.container {
+  @include container;
+  align-items: center;
 }
