--- a/src/app/_mixins.scss
+++ b/src/app/_mixins.scss
@@ -34,3 +34,9 @@
   box-shadow: 4px 4px 8px 0px rgba(0, 0, 0, 0.6);
   border: 1px $borderColor solid;
 }
+@mixin container {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+}
