--- a/src/components/containers/containers.module.scss
+++ b/src/components/containers/containers.module.scss
@@ -24,4 +24,8 @@
   background-color: $secondaryColor;
   border-radius: 10px;
   padding: 1rem;
+  h2 {
+    text-align: center;
+    width: 100%;
+  }
 }
