--- a/src/components/containers/containers.module.scss
+++ b/src/components/containers/containers.module.scss
@@ -24,6 +24,8 @@
   background-color: $secondaryColor;
   border-radius: 10px;
   padding: 1rem;
+  position: relative;
+  width: fit-content;
   h2 {
     text-align: center;
     width: 100%;
