--- a/src/app/transactions/transactions.module.scss
+++ b/src/app/transactions/transactions.module.scss
@@ -5,12 +5,18 @@
 }
 .container {
   @include container;
+  margin: 1rem;
   h1 {
     text-align: center;
+    margin-bottom: 1rem;
   }
 }
 .dashboard {
   display: grid;
   gap: 1rem;
-  margin: 1rem;
+  grid-template-columns: 1fr 2fr 2fr;
+  grid-template-rows: 1fr 1fr;
+  .section {
+    display: grid;
+  }
 }
