--- a/src/components/containers/containers.module.scss
+++ b/src/components/containers/containers.module.scss
@@ -25,9 +25,9 @@
   border-radius: 10px;
   padding: 1rem;
   position: relative;
-  width: fit-content;
   h2 {
     text-align: center;
     width: 100%;
+    margin-bottom: 1rem;
   }
 }
