added portfolio worth

--- a/src/app/transactions/transactions.module.scss
+++ b/src/app/transactions/transactions.module.scss
@@ -17,6 +17,10 @@
   grid-template-columns: 1fr 2fr 2fr;
   grid-template-rows: 1fr 1fr;
   .section {
+    padding: 1rem;
+    gap: 1rem;
     display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: 1fr 1fr;
   }
 }
