--- a/src/app/transactions/transactions.module.scss
+++ b/src/app/transactions/transactions.module.scss
@@ -14,12 +14,12 @@
 .dashboard {
   display: grid;
   gap: 1rem;
-  grid-template-columns: 1fr 2fr 2fr;
+  grid-template-columns: 1fr 3fr;
   grid-template-rows: 3fr 1fr;
   .section {
     gap: 1rem;
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(3, 1fr);
   }
 }
