--- a/src/components/dashboard/graphs.module.scss
+++ b/src/components/dashboard/graphs.module.scss
@@ -1,7 +1,7 @@
 .skeleton {
   display: flex;
 }
-.worth {
+.value {
   display: flex;
   font-size: larger;
   text-align: center;
@@ -18,6 +18,9 @@
   flex-direction: column;
   justify-content: space-between;
   height: 100%;
+  span {
+    line-height: 32px;
+  }
 }
 .flashGreen {
   background-color: rgba(60, 255, 60, 0.5);
