--- a/src/app/transactions/transactions.module.scss
+++ b/src/app/transactions/transactions.module.scss
@@ -14,8 +14,9 @@
 .dashboard {
   display: grid;
   gap: 1rem;
-  grid-template-columns: 1fr 3fr;
-  grid-template-rows: 3fr 1fr;
+  position: relative;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: 1fr 4fr;
   .section {
     gap: 1rem;
     display: grid;
