--- a/src/app/transactions/transactions.module.scss
+++ b/src/app/transactions/transactions.module.scss
@@ -8,19 +8,18 @@
   margin: 1rem;
   h1 {
     text-align: center;
-    margin-bottom: 1rem;
   }
 }
 .dashboard {
   display: grid;
-  gap: 1rem;
+  gap: 1.5rem;
   position: relative;
   grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: 1fr 4fr;
-  .section {
-    gap: 1rem;
+  grid-template-rows: 1fr 5fr;
+  .history {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(3, 1fr);
+    gap: 1.5rem;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr;
   }
 }
