made dashboard responsive

--- a/src/app/_variables.scss
+++ b/src/app/_variables.scss
@@ -15,4 +15,4 @@ $inputBackground: #d2d2d2;
 $textColor: #000;
 $secondaryTextColor: rgba(255, 255, 255, 0.54);
 $roundedRadius: 15px;
-$subNavbarHeight: calc(100vh - $navbarHeight - 5px);
+$subNavbarHeight: calc(100vh - $navbarHeight - 5px - 1rem);
