--- a/src/components/dashboard/graphs.module.scss
+++ b/src/components/dashboard/graphs.module.scss
@@ -1,3 +1,4 @@
+@use "mixins.scss" as *;
 .skeleton {
   display: flex;
   height: 32px;
@@ -16,11 +17,17 @@
 }
 .container {
   position: relative;
-  height: 90%;
+  height: fit-content;
   width: 100%;
   display: flex;
-  justify-content: center;
   flex-direction: column;
+  padding: 0.5rem;
+  @include lgScreen {
+    height: 50vh;
+  }
+  @include mdScreen {
+    height: 30vh;
+  }
   h2 {
     margin-bottom: 1rem;
   }
