--- a/src/components/navbar/navbar.module.scss
+++ b/src/components/navbar/navbar.module.scss
@@ -13,8 +13,8 @@
     margin-left: 10rem;
   }
   .optionList {
-    justify-content: flex-end;
     display: flex;
+    justify-content: flex-end;
     height: 100%;
     width: 50%;
     align-items: center;
@@ -40,6 +40,9 @@
     }
   }
   .auth {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     background-color: transparent;
     border: transparent;
     font-weight: bold;
