--- a/src/components/navbar/auth.module.scss
+++ b/src/components/navbar/auth.module.scss
@@ -10,6 +10,9 @@
   display: flex;
   cursor: pointer;
 }
+.field {
+  margin-bottom: 0.5rem;
+}
 .container {
   background-color: $primaryColor;
   display: flex;
