--- a/src/app/transactions/transactions.module.scss
+++ b/src/app/transactions/transactions.module.scss
@@ -6,7 +6,10 @@
 }
 .container {
   @include container;
-  margin: 1rem;
+  @include lgScreen {
+    margin: 0 10rem;
+  }
+  margin: 0 2rem;
   h1 {
     text-align: center;
   }
