--- a/src/components/dashboard/graphs.module.scss
+++ b/src/components/dashboard/graphs.module.scss
@@ -21,6 +21,7 @@
   width: 100%;
   display: flex;
   flex-direction: column;
+  min-height: 400px;
   padding: 0.5rem;
   @include lgScreen {
     height: 50vh;
