--- a/src/components/priceTable/searchbar.module.scss
+++ b/src/components/priceTable/searchbar.module.scss
@@ -1,3 +1,4 @@
+@use "mixins.scss" as *;
 .container {
   display: flex;
   gap: 1rem;
@@ -5,7 +6,10 @@
   justify-content: center;
   align-items: center;
   margin: 1rem 0;
-  width: 30rem;
+  @include lgScreen {
+    width: 30rem;
+  }
+  width: 20rem;
   .searchbar {
     height: 1rem;
     width: 100%;
