added transaction link disabling if unauhorized

--- a/src/components/navbar/navbar.module.scss
+++ b/src/components/navbar/navbar.module.scss
@@ -54,3 +54,11 @@
   width: 100%;
   margin-bottom: 5px;
 }
+.disabled {
+  pointer-events: none;
+  cursor: default;
+  user-select: none;
+  a {
+    color: gray;
+  }
+}
